# wiscutils

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
msg/: DCPoseGoals.msg  EulerPose.msg
src/: test.py
src/interpolation/: __init__.py  structures.py  util.py
src/wiscutils/convenience/: __init__.py
src/wiscutils/conversions/: style.py  transformations.py
src/wiscutils/geometry/: __init__.py  structures.py
wisc_actions/: package.xml  setup.cfg  setup.py
wisc_actions/wisc_actions/: example.py  library.py  wisc_program.py
wisc_actions/wisc_actions/elements/: __init__.py  actions.py  assignments.py  base.py  calls.py  conditions.py  context.py  definitions.py  flow.py  knowledge.py  math.py  operations.py  parse.py  plans.py  properties.py  requirements.py  structures.py  things.py
wisc_actions/wisc_actions/errors/: warnings.py
wisc_meshes/: CMakeLists.txt  package.xml  setup.cfg  setup.py
wisc_meshes/meshes/: generic_cube.stl  generic_cylinder.stl  generic_slab.stl  generic_sphere.stl  generic_table.stl
wisc_msgs/: CMakeLists.txt  package.xml
wisc_msgs/msg/: DCPoseGoals.msg  DebugGoals.msg  DebugPoseAngles.msg  Euler.msg  EulerPose.msg  EvalResult.msg  GoalUpdate.msg  GoalUpdates.msg  LivelyGoals.msg
wisc_tools/: CMakeLists.txt  package.xml  setup.py
wisc_tools/src/wisc_tools/control/: __init__.py  planning.py  state_controller.py
wisc_tools/src/wisc_tools/convenience/: progress.py
wisc_tools/src/wisc_tools/conversions/: spatial.py  transformations.c
wisc_tools/src/wisc_tools/geometry/: __init__.py  structures.py
wisc_tools/src/wisc_tools/structures/: __init__.py  structures.py
wisc_tools/src/wiscutils/convenience/: __init__.py  iteration.py
wisc_tools/src/wiscutils/conversions/: spatial.py
wisc_tools/src/wiscutils/geometry/: __init__.py  structures.py
